--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Poller+One&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
