--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poller+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400,700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -41,4 +42,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
 }
