--- a/src/App.css
+++ b/src/App.css
@@ -21,14 +21,12 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
@@ -46,4 +44,5 @@
 
 body {
   font-family: "Open Sans", sans-serif;
+  background-color: var(--beige);
 }
