--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,25 @@ code {
     monospace;
 }
 
+img {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  -ms-user-drag: none;
+}
 html:root {
   --lighterBrown: #9b775d;
   --lightBrown: #6f412a;
   --brown: #271d1b;
   --beige: #d6c9a9;
+  --beigeLight: #a49a7f;
   --orange: #b5582c;
 }
